--- a/index.html
+++ b/index.html
@@ -6,8 +6,34 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
+
 <body>
+    <header>
+      <h1>Weather Dashboard</h1>
+    </header>
   
+    <aside>
+      <div class="search-container">
+        <h2>Search for a city:</h2>
+        <input type="text" id="city-input" placeholder="Enter city name">
+        <button id="search-btn">Search</button>
+      </div>
+  
+      <div class="search-history">
+        <p>Search History:</p>
+        <div id="search-history-list"></div>
+      </div>
+    </aside>
+  
+    <main>
+      <div id="current-weather" class="weather-container">
+        <!-- Information about the current weather-->
+      </div>
+  
+      <div id="forecast" class="weather-forecast">
+        <!-- Forecast for the next 5 days-->
+      </div>
+    </main>
     
     <script src="./assets/js/script.js"></script>
 </body>
