--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
       </div>
     </main>
     
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
